fix: added husky

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,11 @@
-//@import "styles/ant.dark";
-
 html,
 body {
   margin: 0;
   padding: 0;
 }
 
-iframe#webpack-dev-server-client-overlay { // it will disable errors screen in dev mode
+iframe#webpack-dev-server-client-overlay {
+  // it will disable errors screen in dev mode
   display: none;
 }
 
